[144] "[realbox] Fix hover glow effect on compose button."
Original change's description:
> [realbox] Fix hover glow effect on compose button.
>
> This change fixes the hover glow effect by removing the padding that was
> added initially because of the white space in the text "AI Mode". The
> button width was shrinking. Setting the flex-shrink: 0 helped the button
> keep the required width without having to add extra padding to the
> button.
> Screencast:
> Before: http://screencast/cast/NjQwNDEzMTUzODMzNzc5MnxmMzVkOTIwMC1hZQ
> After: http://screencast/cast/NDkwNTYxMjY4NDAzNDA0OHw3YWJjMmNhMy0wMw
>
> Bug: b:477205801
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7500678
> Commit-Queue: Dhruv Kathpalia <dhruvkathpalia@google.com>
> Cr-Commit-Position: refs/heads/main@{#1572657}

Bug: 478199806
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7514291
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#3906}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/ui/webui/resources/cr_components/searchbox/searchbox_compose_button.css
+++ b/ui/webui/resources/cr_components/searchbox/searchbox_compose_button.css
@@ -10,6 +10,7 @@
 :host{
   --cr-hover-background-color:#FFFFFF;
   --cr-button-height: 32px;
+  flex-shrink: 0;
 }
 
 #composeButton {
@@ -146,8 +147,7 @@
   display: flex;
   height: 36px;
   margin-inline-end: 8px;
-  padding-inline-end: 18px;
-  padding-inline-start: 2px;
+  padding-inline: 2px;
   position: relative;
   top: 6px;
   z-index: var(--cr-searchbox-compose-button-z-index, 100);
